# fdroid-archive

./: README.md  pyproject.toml
src/fdroid_archive/: __init__.py
