[project]
name = "fdroid-archive"
version = "0.1.0"
description = "archive this app"
authors = [
    {name = "yzqzss", email = "yzqzss@yandex.com"},
]
dependencies = [
    "ruamel-yaml>=0.18.6",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "AGPL"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
fdroid-archive = "fdroid_archive:main"


[tool.pdm]
distribution = true
